View and fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ViewPager Demo</string>
+    <string name="lorem_ipsum">My name is Emeka. I went to Command Day Secondary School, Ojo. I want to be rich with more than enough bastard money.</string>
 </resources>
