--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">ViewPager Demo</string>
     <string name="lorem_ipsum">My name is Emeka. I went to Command Day Secondary School, Ojo. I want to be rich with more than enough bastard money.</string>
+    <string name="r_y">My name is Emeka. I like roasted yam with palm oil, uba, pepper ugu, pomp. I\'m addicted to date. I want to be rich with more than enough bastard money.</string>
+    <string name="agree">Agree</string>
 </resources>
